--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,7 @@
 body{
-    font-family: "Italiana", serif;
+    font-family: "Sorts Mill Goudy", Arial, serif;
+    /* font-family: "Cormorant", serif; */
+    /* font-family: "Amiri", serif; */
     font-weight: unset;
     color: rgb(69, 69, 69);
     /* color: rgb(56, 56, 56); */
@@ -11,30 +13,41 @@ body{
     margin: 0;
     padding: 0;
     display: flex;
-    flex-direction: row;;
+    flex-direction: row;
 }
 
 /* Nav bar and title */
 #nav{
-    height: 100%;
-    /* width: 360px; */
-    flex: 1;
+    height: calc(100% - 8rem);
+    /* width: calc(100% - 4rem); */
+    padding: 4rem 0 4rem 4rem;
+    width: 200px;
+    /* flex: 1; */
 }
     .nav-bar{
-        width: calc(100% - 2rem);
+        
         flex: 1;
         height: 100%;
 
         display: flex;
         flex-direction: column;
-        padding: 2rem 0 2rem 2rem;
+        /* padding: 4rem 0 4rem 4rem; */
 
-        gap: 2rem;
+        /* gap: 2rem; */
+        position: relative;
 
     }
         .title h1{
             /* letter-spacing: .2rem; */
             font-weight: thin;
+            margin: 0;
+            font-size: 2rem;
+        }
+        .title h2{
+            /* letter-spacing: .2rem; */
+            font-weight: thin;
+            margin: 0;
+            font-size: 1.2rem;
         }
 
         .title h4{
@@ -42,9 +55,10 @@ body{
         }
 
         .titles{
+            padding-top: 2rem;
             display: flex;
             flex-direction: column;
-            gap: 1rem;
+            /* gap: 1rem; */
 
         }
 
@@ -69,22 +83,25 @@ body{
 
 .commercial-title h2{
     /* letter-spacing: .2rem; */
-    font-weight:100;
-    font-style: italic;
+    font-weight: 100;
+    /* font-style: italic; */
 }
 
 /* Right side of the screen */
 #content{
-    flex: 3;
-    max-width: 75%;
-    height: calc(100% - 4rem);
+    /* flex: 3; */
+    /* max-width: 75%; */
+    height: calc(100%-4rem);
+    /* height: 100%; */
+    padding: 4rem;
 }
 .home-picture-gallery{
+    /* height: calc(100% - 8rem); */
     height: 100%;
+    /* width: calc(100% - 4rem); */
     width: 100%;
-
     overflow: hidden;
-    padding: 2rem;
+    /* padding: 4rem 4rem 4rem 0; */
 
     display: flex;
     flex-direction: column;
@@ -94,7 +111,7 @@ body{
     width: 100%;
 
     overflow: scroll;
-    padding: 2rem;
+    /* padding: 2rem; */
 
     display: flex;
     flex-direction: column;
@@ -104,12 +121,14 @@ body{
     position: relative;
     justify-content: center;
     align-items: center;
-    max-height: 100vh;
+    max-height: 100%;
+    max-width: 90%;
+    margin: 0 auto 0 auto;
 }
 .solo-item img{
     z-index: 10;
-    max-width: 95%;
-    max-height: 95%;
+    max-width: 100%;
+    max-height: 100%;
     z-index: 1;
     display: block;
     justify-content: center;
@@ -128,19 +147,31 @@ body{
 .double{
     display: flex;
     flex-direction: row;
-    width: calc(100% - 4rem);
+    width: 95%;
+    margin: 0 auto 0 auto;
+    /* width: calc(100% - 4rem); */
     justify-content: space-between;
 }
+.single{
+    width: 95%;
+    margin: 0 auto 0 auto;
+}
+.double div{
+    width: 49.5%;
+}
 .double img{
-    max-width: 48%;
+    max-width: 49.5%;
+}
+.single img{
+    max-width: 100%;
 }
 
 /* Commercials page */
 .commercial-grid{
     display: grid;
-    grid-template-columns: 30% 30% 30%;
-    width: calc(100% - 4rem);
-    gap: .5rem;
+    grid-template-columns: 32% 32% 32%;
+    width: 100%;
+    gap: 2%;
     overflow: scroll;
 }
 /* Photo pages */
@@ -148,7 +179,7 @@ body{
     display: flex;
     flex-direction: column;
     width: 100%;
-    gap: .5rem;
+    gap: 1%;
     /* overflow: scroll; */
 }
     .commercial-item{
@@ -162,8 +193,8 @@ body{
     }
     .commercial-item img{
         z-index: 10;
-        max-width: 95%;
-        max-height: 95%;
+        max-width: 100%;
+        max-height: 100%;
         z-index: 1;
         display: block;
         justify-content: center;
@@ -180,20 +211,107 @@ body{
         transform: translate(-50%, -50%);
         margin: 0;
     }
-    /* .commercial-item img{
+    .commercial-item:hover img{
         opacity: .5;
         z-index: -2;
-    } */
-    /* .commercial-item h2{
+    } 
+    .commercial-item:hover h2{
         opacity: 1;
         cursor: pointer;
-    } */
+        font-weight: 300;
+    }
 
     .text{
-        width: 90%;
+        width: 100%;
+        font-size: .85rem;
         
     }
 
     a:hover{
         cursor: pointer;
+    }
+
+
+    .icons{
+        display: flex;
+
+        flex-direction: row;
+        position: absolute;
+        bottom: 0;
+        gap: 10px;
+        margin: 0 auto 0 auto;
+    }
+    .icons img{
+        width: 25px;
+    }
+
+    .icons img:hover{
+        cursor: pointer;
+    }
+
+    #emailButton{
+        padding: 1px;
+        width: 24px;
+    }
+
+    #emailButton:hover,
+    #instagramButton:hover{
+        cursor: pointer;
+    }
+    .wide{
+        max-height: unset;
+        /* width: 100%; */
+    }
+    @media screen and (max-width: 800px){
+        body{
+            flex-direction: column;
+        }
+        #nav{
+            height: 100px;
+            padding: 0;
+            width: 100%;
+        }
+        .nav-bar{
+            flex-direction: row;
+            padding: 0 2rem;
+            height: 80px;
+            
+        }
+        .title{
+            padding-top: 2rem;
+            width: 300px;
+
+        }
+            .title h2{
+                font-size: 16px;
+            }
+            .titles{
+                flex-direction: row;
+                width: 100%;
+                justify-content: space-around;
+            }
+            .icons{
+                display: none;
+            }
+        #content{
+            width: calc(100% - 8rem);
+            padding: 0 4rem 4rem 4rem;
+            height: calc(100% - 4rem - 100px);
+        }
+            .home-picture-gallery{
+                width: 100%;
+                height: 100%;
+            }
+                .solo-item{
+                    width: 100%;
+                    height: 100%;
+                }
+                .solo-item img{
+                    margin: 0;
+                }
+        
+                .commercial-grid{
+                    grid-template-columns: auto;
+                }
+
     }
