--- a/styles.css
+++ b/styles.css
@@ -19,10 +19,8 @@ body{
 /* Nav bar and title */
 #nav{
     height: calc(100% - 8rem);
-    /* width: calc(100% - 4rem); */
     padding: 4rem 0 4rem 4rem;
-    width: 200px;
-    /* flex: 1; */
+    width: 150px;
 }
     .nav-bar{
         
@@ -31,20 +29,17 @@ body{
 
         display: flex;
         flex-direction: column;
-        /* padding: 4rem 0 4rem 4rem; */
 
-        /* gap: 2rem; */
         position: relative;
+        width: inherit;
 
     }
         .title h1{
-            /* letter-spacing: .2rem; */
             font-weight: thin;
             margin: 0;
             font-size: 2rem;
         }
         .title h2{
-            /* letter-spacing: .2rem; */
             font-weight: thin;
             margin: 0;
             font-size: 1.2rem;
@@ -82,26 +77,18 @@ body{
 /* Commercial nav bar */
 
 .commercial-title h2{
-    /* letter-spacing: .2rem; */
     font-weight: 100;
-    /* font-style: italic; */
 }
 
 /* Right side of the screen */
 #content{
-    /* flex: 3; */
-    /* max-width: 75%; */
     height: calc(100%-4rem);
-    /* height: 100%; */
     padding: 4rem;
 }
 .home-picture-gallery{
-    /* height: calc(100% - 8rem); */
     height: 100%;
-    /* width: calc(100% - 4rem); */
     width: 100%;
     overflow: hidden;
-    /* padding: 4rem 4rem 4rem 0; */
 
     display: flex;
     flex-direction: column;
@@ -111,7 +98,6 @@ body{
     width: 100%;
 
     overflow: scroll;
-    /* padding: 2rem; */
 
     display: flex;
     flex-direction: column;
@@ -136,6 +122,7 @@ body{
     margin: auto auto;
 }
 
+
 /* Photo pages */
 .photo-column{
     display: flex;
@@ -149,11 +136,10 @@ body{
     flex-direction: row;
     width: 95%;
     margin: 0 auto 0 auto;
-    /* width: calc(100% - 4rem); */
     justify-content: space-between;
 }
 .single{
-    width: 95%;
+    max-width: 95%;
     margin: 0 auto 0 auto;
 }
 .double div{
@@ -164,6 +150,11 @@ body{
 }
 .single img{
     max-width: 100%;
+}
+.single.portrait img{
+    max-width: 100%;
+    max-height: 80vh;
+    align-self: center;
 }
 
 /* Commercials page */
@@ -180,13 +171,11 @@ body{
     flex-direction: column;
     width: 100%;
     gap: 1%;
-    /* overflow: scroll; */
 }
     .commercial-item{
         position: relative;
         justify-content: center;
         align-items: center;
-        /* max-width: ; */
     }
     .commercial-item a{
         margin: auto;
@@ -203,7 +192,6 @@ body{
     }
     .commercial-item h2{
         opacity: 0;
-        /* color: black; */
         text-align: center;
         position: absolute;
         top: 50%;
@@ -224,7 +212,6 @@ body{
     .text{
         width: 100%;
         font-size: .85rem;
-        
     }
 
     a:hover{
@@ -260,8 +247,9 @@ body{
     }
     .wide{
         max-height: unset;
-        /* width: 100%; */
     }
+
+
     @media screen and (max-width: 800px){
         body{
             flex-direction: column;
@@ -313,5 +301,4 @@ body{
                 .commercial-grid{
                     grid-template-columns: auto;
                 }
-
     }
